<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPSCreeper</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="mapLabel">(No Location yet set)</string>
    <string name="mapButt">Set Location</string>
    <string name="startButt">ACTIVATE</string>
    <string name="trigLabel">(No Creep Event yet set)</string>
    <string name="trigButt">Configure Creep Event</string>
</resources>
