<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:orientation="vertical" >
        <TextView 
            android:id="@+id/mapStatus"
        	android:text="@string/mapLabel"
	        	android:textStyle="italic"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        />
        <Button
            android:id="@+id/mapButton"
        	android:text="@string/mapButt"
        	android:layout_width="fill_parent" 
        	android:layout_height="wrap_content"
        />
        <LinearLayout 
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
        	android:layout_marginTop="60dp">
            
            <EditText 
                android:id="@+id/radiusBox"
                android:inputType="number"                
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
            />
            <Button 
                android:id="@+id/moreRadButton"
                android:text="+"
                android:textSize="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            />
            <Button 
                android:id="@+id/lessRadButton"
                android:text="-"
                android:textSize="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            />"
        </LinearLayout>
         <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginTop="60dp" >
	        <TextView 
	            android:id="@+id/trigStatus"
	        	android:text="@string/trigLabel"
	        	android:textStyle="italic"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        />
	        
         	<LinearLayout
        		android:layout_width="wrap_content"
       	 		android:layout_height="wrap_content"
		        android:orientation="vertical" 
        		android:layout_centerHorizontal="true">
	        
		        	<Button
			            android:id="@+id/trigButton1"
			        	android:text="@string/trigButt"
			        	android:layout_width="wrap_content" 
			        	android:layout_height="wrap_content"
			        />
		     </LinearLayout>  
    	</LinearLayout>
    	
         <Button
			            android:id="@+id/actButton"
			        	android:text="@string/startButt"
			        	android:layout_width="fill_parent" 
			        	android:layout_height="wrap_content"
			        />
            
    </LinearLayout>

</RelativeLayout>
